Fix overlap of error/button in console

--- a/style/index.css
+++ b/style/index.css
@@ -74,6 +74,7 @@ body {
   color: #fff;
   font-weight: 700;
   padding: 1em;
+  padding-bottom: 5em;
   width: 100%;
   box-sizing: border-box;
   white-space: pre-wrap;
